manifests/4-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-premier-deploiement
spec:
  replicas: 3
  selector:
    matchLabels:
      eric: ramzy
  template:
    metadata:
      labels:
        eric: ramzy
    spec:
      containers:
      - image: swoutch/echo-flask
        name: echo-container
        imagePullPolicy: Always
