manifests/4-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: pikachu.swout.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-expose-internet
                port:
                  number: 80
